- MFB: Fixed bug #45180 ('class::method' works differently than array('class', 'method'))